08-02-2025 ... 0.6.0.0 ... Reverse Futility Pruning ............. (177.7 +/- 47.7), (8 + 0.08), (SPRT, 242), (https://sscg13.pythonanywhere.com/test/654/)
08-02-2025 ... 0.6.1.0 ... Null Move Pruning .................... (54.9 +/- 23.7) , (8 + 0.08), (SPRT, 606), (https://sscg13.pythonanywhere.com/test/659/)
08-03-2025 ... 0.6.2.0 ... Aspiration Windows ................... (8.2 +/- 6.5)   , (8 + 0.08), (SPRT, 7048),(https://sscg13.pythonanywhere.com/test/666/)
08-03-2025 ... 0.6.3.0 ... Killer Move .......................... (24.3 +/- 14.8) , (8 + 0.08), (SPRT, 1432),(https://sscg13.pythonanywhere.com/test/670/)
08-03-2025 ... 0.7.0.0 ... Late Move Reductions ................. (64.3 +/- 25.2) , (8 + 0.08), (SPRT, 552), (https://sscg13.pythonanywhere.com/test/672/)
08-06-2025 ... 0.8.0.0 ... SMP with Threadpool (2v1 elo shown) .. (83.8 +/- 17.3) , (8 + 0.08), (N = 1000) , (https://sscg13.pythonanywhere.com/test/690/) 
08-06-2025 ... 0.8.0.1 ... Fix PV Table
08-08-2025 ... 0.8.0.2 ... Mate Distance Prune in PV nodes
08-08-2025 ... 0.8.0.3 ... Move UCI into Interface Object
08-09-2025 ... 0.8.0.4 ... Alias Search Functions, Soft Node Limit
08-09-2025 ... 0.8.1.0 ... Introduce Tapered Eval
08-18-2025 ... 0.8.1.1 ... Perftsuite, FRC Fixes, Specialize Search Functions, Start Datagen
09-15-2025 ... 0.8.2.0 ... Legal Move Generation ................ (5.6  +/- 9.6 ) , (8 + 0.08), (SPRT, 2850),(https://sscg13.pythonanywhere.com/test/1042/)
09-23-2025 ... 0.8.2.1 ... Data Generation
10-06-2025 ... 0.9.0.0 ... PSQT Tuning .......................... (324.4 +/- 65.1), (8 + 0.08), (N = 200), (Local)
10-06-2025 ... 0.9.1.0 ... PSQT Tuning 2 ........................ (156.6 +/- 29.9), (8 + 0.08), (N = 400), (Local)
10-08-2025 ... 0.9.2.0 ... PSQT Tuning 3 ........................ (54.7 +/- 19.1) , (8 + 0.08), (N = 800), (Local)
11-17-2025 ... 0.9.3.0 ... QS SEE Pruning ....................... (11.9 +/- 8.8)  , (8 + 0.08), (SPRT, 3184),(https://sscg13.pythonanywhere.com/test/1534/)